changed projects sectoion from grid to vertical thing, updated contact section, still need to fix gap. add more styling

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body {
     font-size: 10px; /* 1rem*/
     line-height: 1.2;
     margin: 0 auto;
-    align-items: center;
+    max-width: 100%;
 }
 
 h1 {
@@ -41,9 +41,7 @@ h1 {
    
 }
 
-h2 {
-    font-size: 1.5rem;
-    font-weight: 400;}
+
 
 ul {
     list-style: none;
@@ -66,12 +64,12 @@ h3 {
 
 /* NAV */
 nav {
-    display: flex;
     background-color: #ab8093;
     position: fixed;
-    justify-content: flex-end;
     padding: 3rem;
-    width: 100vw;
+    width: 100%;
+    top: 0;
+    left: 0;
     
 }
 
@@ -80,6 +78,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin-right: 2rem;
     font-weight: 600;
     text-transform: uppercase;
     margin-right: 2rem;
@@ -135,7 +134,6 @@ nav {
 .welcome-section {
     display:flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
@@ -143,13 +141,17 @@ nav {
     justify-self: center;
     top: 0;
     left: 0;
-    width: 1600px;
+    min-width: 100vw;
+    max-width: 100vw;
+    align-items: center;
+    
 }
 
 #welcome-section > h1 {
     font-family: 'Sacramento', monospace;
     font-size: 6rem;
     color: #ffffff;
+    
 }
 
 #welcome-section > h2 {
@@ -188,6 +190,35 @@ nav {
     width: 100%;
 }
 
+.project-section {
+    display: flex;
+    flex-direction: column;
+    border: 5px solid red;
+}
+.project {
+    display: flex;
+    margin: auto;
+    border: 5px solid green;
+    height: 75vh;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+.project-desc {
+    padding: 2rem;
+    font-family: 'Work Sans';
+    font-size: 1.75rem;
+    max-width: 33%;
+    margin-left: 6rem;
+    
+    
+}
+
+.project-desc > p {
+}
+
 @media screen and (max-width: 480px) {
     .projects-header {
         font-size: 1.75rem;
@@ -222,7 +253,7 @@ nav {
 .project-image {
     height: calc(100% - 6.6rem);
     border-radius: 25px;
-    width: 100%;
+    width: 50%;
     border: 1px solid seashell;
    
 }
@@ -252,36 +283,29 @@ nav {
 
 
 /* CONTACT SECTION */
-.contact-section {
+
+.invite {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 0 2rem;
-    margin-top: 2rem;
-    background: white;
+    max-width: 100%;
+    margin: 2rem auto 0 auto;
     height: 75vh;
 }
 
-
-.contact-section > p {
-    font-size: 2rem;
-    font-weight: 600;
+.emailme {
+    font-size: 3rem;
     color: goldenrod;
-}
-
-.contact-links {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    font-size: 1.75rem;
-    margin: 1.5rem;
+    margin: 2rem;
+    max-width: 33%;
 }
 
 
-i {
-    padding-right: 0.2rem;
+.selfie {
+    max-width: 300px;
 }
+
+
 
 @media screen and (max-width: 480px) {
 
@@ -325,7 +349,7 @@ footer {
     flex-direction: row;
     justify-content: flex-end;
     padding: 1rem 3rem;
-    margin: 0 6rem;
+    margin: 0;
     width: 100%;
 }
 
@@ -334,4 +358,15 @@ footer > p {
     margin-left: 2rem;
     color: white;
 }
+
+.sm-links {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    font-size: 1.75rem;
+    margin: 1.5rem;
+    color: #fff;
+    
+}
+
 /* need to add social media icon links */
